moved inventory and tables to owner dashboard

--- a/src/components/Dashboard/Main.css
+++ b/src/components/Dashboard/Main.css
@@ -1,4 +1,4 @@
-main {
+/* main {
   background: #f3f4f6;
   width: 100%;
   max-width: 1000px;
@@ -195,4 +195,4 @@ main {
     grid-template-columns: 1fr;
     margin-top: 30px;
   }
-}
+} */
